[project]
name = "learning-log"
version = "0.1.0"
description = ""
authors = [
    {name = "AleCozar"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "django-bootstrap5 (>=25.1,<26.0)",
    "platformshconfig (>=2.4.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
